--- a/threeByTen.html
+++ b/threeByTen.html
@@ -6,7 +6,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="threeColumn.css">
+        <link rel="stylesheet" href="threeByTen.css">
     </head>
     <body>
         <header>
@@ -14,15 +14,127 @@
         </header>
         
         <main>
-            <div class="main-left">
-                <!-- DIV IN MAIN LEFT TEST -->
+
+            <div class="row">
+                <div class="main-left">
+                    <!-- DIV IN MAIN LEFT TEST -->
+                </div>
+                <div class="main-middle">
+                    <!-- DIV IN MAIN MIDDLE TEST -->
+                </div>
+                <div class="main-right">
+                    <!-- DIV IN MAIN RIGHT TEST -->
+                </div>
             </div>
-            <div class="main-middle">
-                <!-- DIV IN MAIN MIDDLE TEST -->
+
+            <div class="row">
+                <div class="main-left">
+                    <!-- DIV IN MAIN LEFT TEST -->
+                </div>
+                <div class="main-middle">
+                    <!-- DIV IN MAIN MIDDLE TEST -->
+                </div>
+                <div class="main-right">
+                    <!-- DIV IN MAIN RIGHT TEST -->
+                </div>
             </div>
-            <div class="main-right">
-                <!-- DIV IN MAIN RIGHT TEST -->
+
+            <div class="row">
+                <div class="main-left">
+                    <!-- DIV IN MAIN LEFT TEST -->
+                </div>
+                <div class="main-middle">
+                    <!-- DIV IN MAIN MIDDLE TEST -->
+                </div>
+                <div class="main-right">
+                    <!-- DIV IN MAIN RIGHT TEST -->
+                </div>
             </div>
+
+            <div class="row">
+                <div class="main-left">
+                    <!-- DIV IN MAIN LEFT TEST -->
+                </div>
+                <div class="main-middle">
+                    <!-- DIV IN MAIN MIDDLE TEST -->
+                </div>
+                <div class="main-right">
+                    <!-- DIV IN MAIN RIGHT TEST -->
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="main-left">
+                    <!-- DIV IN MAIN LEFT TEST -->
+                </div>
+                <div class="main-middle">
+                    <!-- DIV IN MAIN MIDDLE TEST -->
+                </div>
+                <div class="main-right">
+                    <!-- DIV IN MAIN RIGHT TEST -->
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="main-left">
+                    <!-- DIV IN MAIN LEFT TEST -->
+                </div>
+                <div class="main-middle">
+                    <!-- DIV IN MAIN MIDDLE TEST -->
+                </div>
+                <div class="main-right">
+                    <!-- DIV IN MAIN RIGHT TEST -->
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="main-left">
+                    <!-- DIV IN MAIN LEFT TEST -->
+                </div>
+                <div class="main-middle">
+                    <!-- DIV IN MAIN MIDDLE TEST -->
+                </div>
+                <div class="main-right">
+                    <!-- DIV IN MAIN RIGHT TEST -->
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="main-left">
+                    <!-- DIV IN MAIN LEFT TEST -->
+                </div>
+                <div class="main-middle">
+                    <!-- DIV IN MAIN MIDDLE TEST -->
+                </div>
+                <div class="main-right">
+                    <!-- DIV IN MAIN RIGHT TEST -->
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="main-left">
+                    <!-- DIV IN MAIN LEFT TEST -->
+                </div>
+                <div class="main-middle">
+                    <!-- DIV IN MAIN MIDDLE TEST -->
+                </div>
+                <div class="main-right">
+                    <!-- DIV IN MAIN RIGHT TEST -->
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="main-left">
+                    <!-- DIV IN MAIN LEFT TEST -->
+                </div>
+                <div class="main-middle">
+                    <!-- DIV IN MAIN MIDDLE TEST -->
+                </div>
+                <div class="main-right">
+                    <!-- DIV IN MAIN RIGHT TEST -->
+                </div>
+            </div>
+
         </main>
 
         <footer>
